Fix alignment in footer content

--- a/css/shortcodes/footer.css
+++ b/css/shortcodes/footer.css
@@ -225,7 +225,11 @@
     padding: 80px 0;
 }
 
-
+.footer-4.dark .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .footer-4.dark .social-link  a {
     display: inline-block;
@@ -234,13 +238,12 @@
     margin: 10px;
 }
 
-
 .footer-4.dark  .social-link.circle a {
     border: 1px solid #fff;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    line-height: 40px;
+    line-height: 41px;
     text-align: center;
 }
 
